--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,9 +1,34 @@
 {
     "name": "server",
+    "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "bun --watch run server.ts"
+        "dev": "bunx --bun vite"
     },
     "dependencies": {
-        "express": "^4.21.2"
+        "@hono/zod-validator": "^0.4.3",
+        "@mysten/sui": "^1.25.0",
+        "@tailwindcss/vite": "^4.0.11",
+        "@tanstack/react-query": "^5.67.1",
+        "bip39": "^3.1.0",
+        "dotenv": "^16.4.7",
+        "hono": "^4.7.4",
+        "lucide-react": "^0.477.0",
+        "moment": "^2.30.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router": "^7.2.0",
+        "sonner": "^2.0.1",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss": "^4.0.11",
+        "vaul": "^1.1.2",
+        "zod": "^3.24.2"
+    },
+    "devDependencies": {
+        "@hono/vite-dev-server": "^0.19.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "tailwindcss-motion": "^1.1.0",
+        "vite": "^6.2.0"
     }
 }
