server is not ok

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,17 +7,23 @@
     },
     "dependencies": {
         "@hono/zod-validator": "^0.4.3",
-        "@mysten/sui": "^1.25.0",
+        "@mysten/dapp-kit": "^0.15.2",
+        "@mysten/sui": "^1.26.1",
+        "@mysten/wallet-standard": "^0.14.2",
+        "@suiet/wallet-kit": "^0.3.4",
         "@tailwindcss/vite": "^4.0.11",
-        "@tanstack/react-query": "^5.67.1",
+        "@tanstack/react-query": "^5.71.5",
+        "axios": "^1.8.4",
         "bip39": "^3.1.0",
         "dotenv": "^16.4.7",
+        "framer-motion": "^12.6.3",
         "hono": "^4.7.4",
         "lucide-react": "^0.477.0",
         "moment": "^2.30.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-router": "^7.2.0",
+        "react-router-dom": "^7.4.1",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "tailwindcss": "^4.0.11",
