--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,6 +20,7 @@
         "hono": "^4.7.4",
         "lucide-react": "^0.477.0",
         "moment": "^2.30.1",
+        "mongoose": "^8.13.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-router": "^7.2.0",
