--- a/packages/server/tsconfig.app.json
+++ b/packages/server/tsconfig.app.json
@@ -12,7 +12,13 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": ["app"]
 }
