--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,15 +10,19 @@
         "@mysten/dapp-kit": "^0.15.2",
         "@mysten/sui": "^1.26.1",
         "@mysten/wallet-standard": "^0.14.2",
+        "@radix-ui/react-tabs": "^1.1.11",
         "@suiet/wallet-kit": "^0.3.4",
-        "@tailwindcss/vite": "^4.0.11",
+        "@tailwindcss/vite": "^4.1.6",
         "@tanstack/react-query": "^5.71.5",
+        "async-lock": "^1.4.1",
         "axios": "^1.8.4",
         "bip39": "^3.1.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "dotenv": "^16.4.7",
-        "framer-motion": "^12.6.3",
+        "framer-motion": "^12.10.5",
         "hono": "^4.7.4",
-        "lucide-react": "^0.477.0",
+        "lucide-react": "^0.509.0",
         "moment": "^2.30.1",
         "mongoose": "^8.13.2",
         "react": "^19.0.0",
@@ -26,16 +30,18 @@
         "react-router": "^7.2.0",
         "react-router-dom": "^7.4.1",
         "sonner": "^2.0.1",
-        "tailwind-merge": "^3.0.2",
-        "tailwindcss": "^4.0.11",
+        "tailwind-merge": "^3.2.0",
+        "tailwindcss": "^4.1.6",
         "vaul": "^1.1.2",
         "zod": "^3.24.2"
     },
     "devDependencies": {
         "@hono/vite-dev-server": "^0.19.0",
+        "@types/node": "^22.15.17",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "tailwindcss-motion": "^1.1.0",
+        "tw-animate-css": "^1.2.9",
         "vite": "^6.2.0"
     }
 }
