--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,7 @@
         "hono": "^4.7.4",
         "lucide-react": "^0.509.0",
         "moment": "^2.30.1",
-        "mongoose": "^8.13.2",
+        "mongoose": "^8.14.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-router": "^7.2.0",
@@ -40,6 +40,7 @@
         "@types/node": "^22.15.17",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.4.1",
         "tailwindcss-motion": "^1.1.0",
         "tw-animate-css": "^1.2.9",
         "vite": "^6.2.0"
