--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -37,6 +37,7 @@
     },
     "devDependencies": {
         "@hono/vite-dev-server": "^0.19.0",
+        "@types/bun": "^1.2.14",
         "@types/node": "^22.15.17",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
